Feature/DAO and API for settlementWindows (#14)
* WIP added GET for settlementWindowId

* WIP added handler for GET settlementWindow by id; Added plugin for logging based on central-services.Logger

* WIP added enums loading from Db on server startup

* WIP load ENUMS to server.app.enums

* added domain layer and changed the code structure

* WIP slight change

* WIP

* WIP getSettlementWindow by filter - DONE

* functionality finished

* removed unnecessary then

* some small changes

* WIP

* settlementEventTrigger is done

* Added settlemnts get by params endpoint

* Added settlemnts get by params endpoint

* wip

* merged with docker file

* WIP

* WIP

* settlementWindow getById is done

* settlementWindow getByParams & settlementWindow facade get by list of Ids are done

* settlementWindow Close is done

* wip

* swagger deffinition aligned to the latest changes and small naming issue fixed

* Added get settlemntById endpoint up to the facde

* updated settlementWindows to latest changes

* Added update settlements by ID (Put) up to dao

* get settlement by id

* Test get settlements by Id made changes to facde

* WIP

* get settlement by participantId and accountId

* added a file

* DAO does not throw now, if object not found

* settlementWindows tested

* fixed wrong version change in conflict resolution
