# src/handlers/settlements/{settlementId}/participants/{participantId}.js
@@ -32,25 +32,25 @@
 
 'use strict';
 
-const dataAccess = require('../../data/settlementWindows/{id}');
 const Boom = require('boom');
+const dataAccess = require('../../../../../tests/data/settlements/{settlementId}/participants/{participantId}');
 const Logger = require('@mojaloop/central-services-shared').Logger
 const Path = require('path');
 
 Logger.info('path ', Path.basename(__filename));
 
 /**
- * Operations on /settlementWindows/{id}
+ * Operations on /settlements/{settlementId}/participants/{participantId}
  */
 module.exports = {
     /**
-     * summary: Returns a Settlement Window as per id.
+     * summary: Acknowledegement of settlement by updating with Settlements Id and Participant Id.
      * description: 
-     * parameters: id
+     * parameters: settlementId, participantId, settlementParticipantUpdatePayload
      * produces: application/json
      * responses: 200, 400, 401, 404, 415, default
      */
-    get: async function getSettlementWindowById(request, h) {
+    put: async function updateSettlementBySettlementParticipant(request, h) {
         const getData = new Promise((resolve, reject) => {
             switch (request.server.app.responseCode) {
                 case 200:
@@ -58,7 +58,7 @@ module.exports = {
                 case 401:
                 case 404:
                 case 415:
-                    dataAccess.get[`${request.server.app.responseCode}`](request, h, (error, mock) => {
+                    dataAccess.put[`${request.server.app.responseCode}`](request, h, (error, mock) => {
                         if (error) reject(error)
                         else if (!mock.responses) resolve()
                         else if (mock.responses && mock.responses.code) resolve(Boom.boomify(new Error(mock.responses.message), {statusCode: mock.responses.code}))
@@ -66,45 +66,7 @@ module.exports = {
                     })
                     break
                 default:
-                    dataAccess.get[`default`](request, h, (error, mock) => {
-                        if (error) reject(error)
-                        else if (!mock.responses) resolve()
-                        else if (mock.responses && mock.responses.code) resolve(Boom.boomify(new Error(mock.responses.message), {statusCode: mock.responses.code}))
-                        else resolve(mock.responses)
-                    })
-            }
-
-        })
-        try {
-            return await getData
-        } catch (e) {
-            throw (Boom.boomify(e))
-        };
-    },
-    /**
-     * summary: If the settlementWindow is open, it can be closed and a new window created. If it is already closed, return an error message. Returns the new settlement window.
-     * description: 
-     * parameters: id, settlementWindowClosurePayload
-     * produces: application/json
-     * responses: 200, 400, 401, 404, 415, default
-     */
-    post: async function closeSettlementWindow(request, h) {
-        const getData = new Promise((resolve, reject) => {
-            switch (request.server.app.responseCode) {
-                case 200:
-                case 400:
-                case 401:
-                case 404:
-                case 415:
-                    dataAccess.post[`${request.server.app.responseCode}`](request, h, (error, mock) => {
-                        if (error) reject(error)
-                        else if (!mock.responses) resolve()
-                        else if (mock.responses && mock.responses.code) resolve(Boom.boomify(new Error(mock.responses.message), {statusCode: mock.responses.code}))
-                        else resolve(mock.responses)
-                    })
-                    break
-                default:
-                    dataAccess.post[`default`](request, h, (error, mock) => {
+                    dataAccess.put[`default`](request, h, (error, mock) => {
                         if (error) reject(error)
                         else if (!mock.responses) resolve()
                         else if (mock.responses && mock.responses.code) resolve(Boom.boomify(new Error(mock.responses.message), {statusCode: mock.responses.code}))
